--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" data-theme="theme1">
 <head>
   <meta charset="utf-8">
   <title>Frontend</title>
