--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" data-theme="theme1">
+<html lang="en" >
 <head>
   <meta charset="utf-8">
   <title>Frontend</title>
@@ -8,7 +8,7 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@40,400,1,0" />
 </head>
-<body>
+<body data-theme="theme1">
   <app-root></app-root>
 </body>
 </html>
